# digital-meridian-spectrometer

./: .appveyor.yml  .flake8  .gitignore  .travis.yml  LoadMSPdata.py  PlotDMSP.m  README.md  README.rst  dmsp.m  mypy.ini  pyproject.toml  readMSP.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .travis.yml
dmsp/: __init__.py  io.py  plots.py
matlab/: PlotDMSP.m  dmsp.m
msp_aurora/: __init__.py  plots.py  readMSP.py
spectroreader/: readMSP.py
src/dmsp/: __init__.py  io.py  plots.py  ticks.py
src/dmsp/tests/: test_mod.py
tests/: PKR_SMSP_STD_20141011.NC  test.py  test_all.py  test_mod.py
