[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmsp"
description = "Load and plot UAF Geophysical Institute Digital Meridian Spectrometer data"
keywords = [ "aurora", "spectrograph" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = ["netCDF4", "xarray", "numpy", "python-dateutil"]
requires-python = ">=3.8"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "dmsp.__version__"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy",
  "types-python-dateutil", "types-requests"]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true

[tool.black]
line-length = 99
