[metadata]
name = dmsp
version = 0.6.0
author = Michael Hirsch, Ph.D.
description = Load and plot UAF Geophysical Institute Digital Meridian Spectrometer data
url = https://github.com/scivision/meridian-spectrometer-reader
keywords =
  aurora
  spectrograph
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  netCDF4
  xarray
  numpy>=1.7.0
  python-dateutil
  sciencedates

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib

[options.entry_points]
console_scripts =
  LoadMSPdata = LoadMSPdata:main

[flake8]
max-line-length = 132
ignore = E501
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
